<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLoginTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLoginName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/emailLogin"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="text"
                android:padding="15sp"
                android:text="@string/type_your_email"
                android:textColor="@color/grayText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btLoginLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:backgroundTint="@color/myrtleGreen"
            android:paddingLeft="130sp"
            android:paddingRight="130sp"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLoginAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/haven_t_account" />

            <TextView
                android:id="@+id/tvLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:gravity="center"
                android:text="@string/register_now"
                android:textColor="@color/myrtleGreen" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>