<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRegisterTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:text="Full name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="text"
                android:padding="15sp"
                android:text="@string/type_your_name"
                android:textColor="@color/grayText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/emailLogin"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="text"
                android:padding="15sp"
                android:text="@string/type_your_email"
                android:textColor="@color/grayText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btRegisterRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:backgroundTint="@color/myrtleGreen"
            android:paddingLeft="130sp"
            android:paddingRight="130sp"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegisterAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/tvRegisterLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/myrtleGreen" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>