<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/connosco_consegue_ler_novos_livros_em_troca_dos_seus_antigos__color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/bgEntry"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginTop="-60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background2" />

    <ImageView
        android:id="@+id/bgReadingMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/bgEntry"
        app:layout_constraintEnd_toEndOf="@+id/bgEntry"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/image_22" />


    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="942dp"
        android:layout_height="717dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgReadingMan"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/ellipse_shape" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgEntry"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/tvEntryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/troque_Livro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvEntryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livros_antigos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginTop="60sp"
            android:layout_marginEnd="40sp"
            android:backgroundTint="@color/cambridgeBlue"
            android:gravity="center"
            android:padding="20sp"
            android:text="@string/btnEntry"
            android:textAlignment="gravity" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>