<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cambridgeBlue"
    android:backgroundTintMode="multiply"
    tools:context=".AddBook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003">

        <TextView
            android:id="@+id/tvAddBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_book"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etAddBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="text"
                android:padding="15sp"
                android:textColor="@color/grayText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/author_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etAddBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="text"
                android:padding="15sp"
                android:textColor="@color/grayText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddBookPublicationYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/publication_year"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etAddBookPublicationYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedradius"
                android:backgroundTint="@color/grayBackground"
                android:ems="10"
                android:inputType="text"
                android:padding="15sp"
                android:textColor="@color/grayText" />
        </LinearLayout>

        <Button
            android:id="@+id/btAddBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:backgroundTint="@color/licorice"
            android:paddingLeft="130sp"
            android:paddingRight="130sp"
            android:text="@string/add_book" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>